--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,7 @@
 			crossorigin="anonymous"
 		/>
 
-		<link
-			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-			rel="stylesheet"
-			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-			crossorigin="anonymous"
-		/>
+		<script src="https://kit.fontawesome.com/b8bed66338.js"></script>
 
 		<title>React App</title>
 	</head>
